--- a/src/gui/rcontrol/public/index.html
+++ b/src/gui/rcontrol/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head lang="en">
+<head lang="en" data-bs-theme="dark">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <main>
+        <div id="app"></div>
+    </main>
 </body>
 
 </html>
