--- a/src/gui/rcontrol/public/index.html
+++ b/src/gui/rcontrol/public/index.html
@@ -3,11 +3,9 @@
 
 <head lang="en" data-bs-theme="dark">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+    <title>Remote Control</title>
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
